@@ -81,6 +81,7 @@
 	}
 
 	show_header($page["title"],0,0);
+	echo convert_units(2343600,"uptime");
 ?>
 
 <?php
